[package]
name = "gpasswd"
version = "1.0.0"
edition = "2021"

[dependencies]
regex = "1.7.0"
anyhow = "1.0.70"
clap = { version = "4.0.27", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }